# And-CppFreeType271

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/test/freetype271/: ExampleInstrumentedTest.java
app/src/main/cpp/: testmain.cpp
app/src/main/java/com/test/freetype271/: MainActivity.java
app/src/test/java/com/test/freetype271/: ExampleUnitTest.java
